--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "testEnvironment": "node"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "mongoose": "^5.5.14"
   },
   "devDependencies": {
+    "dotenv-webpack": "^1.7.0",
     "eslint": "^5.16.0",
     "jest": "^24.8.0",
     "nodemon": "^1.19.1",
